# CaseToolsLabs

./: .gitignore  README.md  collide
1task/cmake/: CMakeLists.txt
1task/cmake/include/: lib.h
1task/cmake/scripts/: compile.sh  deb.sh  install.sh  testrun.sh
1task/cmake/src/: lib.cpp  main.cpp
1task/make/: Makefile  input  lib.cpp  main.cpp  program  test-input
5task/: bad.cpp  main.cpp  raw_main.cpp
